--- a/index.html
+++ b/index.html
@@ -169,14 +169,26 @@
             </div>
         </section>
 
-        <!-- Contact Section -->
-        <section id="contact" class="section component">
+        <!-- Contact Form Section -->
+        <section id="contact" class="section contact-form-section component">
             <div class="container">
                 <h2>Contact Us</h2>
-                <div class="contact-content">
-                    <p class="lead-text">Ready to build something extraordinary? Let's connect.</p>
-                    <a href="mailto:contact@fivespillars.com" class="cta-button">Get in Touch</a>
-                </div>
+                <!-- Simple contact form -->
+                <form class="contact-form" autocomplete="off">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" required placeholder="Your Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required placeholder="you@email.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" rows="5" required placeholder="Type your message..."></textarea>
+                    </div>
+                    <button type="submit" class="cta-button">Send Message</button>
+                </form>
             </div>
         </section>
     </main>
