--- a/index.html
+++ b/index.html
@@ -188,22 +188,25 @@
                             <li>Site Setup</li>
                         </ul>
                     </div>
-                    <div class="service-card">
-                        <h3>E - Event Management</h3>
-                        <ul>
-                            <li>Planning & Logistics</li>
-                            <li>Waitstaff & Chefs</li>
-                            <li>Consultants</li>
-                            <li>Funeral Directors</li>
-                        </ul>
-                    </div>
-                    <div class="service-card">
-                        <h3>S - Strategic Consultancy</h3>
-                        <ul>
-                            <li>Business Start-up</li>
-                            <li>Scale Operations</li>
-                            <li>Improvement Strategies</li>
-                        </ul>
+                    <!-- Bottom row wrapped for perfect centering -->
+                    <div class="services-bottom-row">
+                        <div class="service-card">
+                            <h3>E - Event Management</h3>
+                            <ul>
+                                <li>Planning & Logistics</li>
+                                <li>Waitstaff & Chefs</li>
+                                <li>Consultants</li>
+                                <li>Funeral Directors</li>
+                            </ul>
+                        </div>
+                        <div class="service-card">
+                            <h3>S - Strategic Consultancy</h3>
+                            <ul>
+                                <li>Business Start-up</li>
+                                <li>Scale Operations</li>
+                                <li>Improvement Strategies</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <!-- Mobile Services Carousel (hidden on desktop) -->
