--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@
     <title>Fives Pillars</title>
 </head>
 <body>
+    <!-- Techy animated background (carbon helix + lasers) -->
+    <div class="tech-bg" aria-hidden="true">
+      <!-- SVG carbon helix -->
+      <svg viewBox="0 0 1920 1080" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g>
+          <path d="M200 0 Q400 540 200 1080" stroke="#00f0ff" stroke-width="4" fill="none"/>
+          <path d="M400 0 Q600 540 400 1080" stroke="#ff00e6" stroke-width="4" fill="none"/>
+          <path d="M600 0 Q800 540 600 1080" stroke="#00f0ff" stroke-width="4" fill="none"/>
+          <path d="M800 0 Q1000 540 800 1080" stroke="#ff00e6" stroke-width="4" fill="none"/>
+          <path d="M1000 0 Q1200 540 1000 1080" stroke="#00f0ff" stroke-width="4" fill="none"/>
+          <path d="M1200 0 Q1400 540 1200 1080" stroke="#ff00e6" stroke-width="4" fill="none"/>
+          <path d="M1400 0 Q1600 540 1400 1080" stroke="#00f0ff" stroke-width="4" fill="none"/>
+          <path d="M1600 0 Q1800 540 1600 1080" stroke="#ff00e6" stroke-width="4" fill="none"/>
+        </g>
+      </svg>
+      <!-- Animated laser lines -->
+      <div class="laser" style="left: 30vw;"></div>
+      <div class="laser l2"></div>
+    </div>
+
     <!-- Header Section -->
     <header class="component">
         <button class="mobile-menu-button" aria-label="Toggle Menu">
@@ -328,10 +348,102 @@
 
     <!-- Footer Section -->
     <footer class="component">
+        <div class="footer-waves">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="var(--primary-blue)" fill-opacity="0.1" d="M0,96L48,112C96,128,192,160,288,160C384,160,480,128,576,122.7C672,117,768,139,864,154.7C960,171,1056,181,1152,165.3C1248,149,1344,107,1392,85.3L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+            </svg>
+        </div>
         <div class="container">
             <div class="footer-content">
-                <img src="images/Five-Pillars-logo.svg" alt="Fives Pillars Logo" class="footer-logo">
-                <p class="footer-tagline">Legacy of Service. Powered by Experience. Built with Wisdom.</p>
+                <!-- Main Footer Grid -->
+                <div class="footer-grid">
+                    <!-- Company Info -->
+                    <div class="footer-section">
+                        <div class="footer-logo-wrapper">
+                            <img src="images/Five-Pillars-logo.svg" alt="Fives Pillars Logo" class="footer-logo">
+                        </div>
+                        <p class="footer-tagline">Legacy of Service. Powered by Experience. Built with Wisdom.</p>
+                        <div class="footer-social">
+                            <a href="#" class="social-link" aria-label="Facebook">
+                                <svg viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                                </svg>
+                            </a>
+                            <a href="#" class="social-link" aria-label="LinkedIn">
+                                <svg viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                                </svg>
+                            </a>
+                            <a href="#" class="social-link" aria-label="Instagram">
+                                <svg viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M12.017 0C5.396 0 .029 5.367.029 11.987c0 6.62 5.367 11.987 11.988 11.987 6.62 0 11.987-5.367 11.987-11.987C24.014 5.367 18.637.001 12.017.001zM8.449 16.988c-1.297 0-2.448-.49-3.323-1.297C4.198 14.895 3.708 13.744 3.708 12.447s.49-2.448 1.297-3.323c.875-.807 2.026-1.297 3.323-1.297s2.448.49 3.323 1.297c.807.875 1.297 2.026 1.297 3.323s-.49 2.448-1.297 3.323c-.875.807-2.026 1.297-3.323 1.297zm7.718-1.297c-.875.807-2.026 1.297-3.323 1.297s-2.448-.49-3.323-1.297c-.807-.875-1.297-2.026-1.297-3.323s.49-2.448 1.297-3.323c.875-.807 2.026-1.297 3.323-1.297s2.448.49 3.323 1.297c.807.875 1.297 2.026 1.297 3.323s-.49 2.448-1.297 3.323z"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Quick Links -->
+                    <div class="footer-section">
+                        <h4 class="footer-heading">Quick Links</h4>
+                        <ul class="footer-links">
+                            <li><a href="#about">About Us</a></li>
+                            <li><a href="#services">Our Services</a></li>
+                            <li><a href="#values">Our Values</a></li>
+                            <li><a href="#founders">Meet the Team</a></li>
+                            <li><a href="#contact">Contact Us</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- Services -->
+                    <div class="footer-section">
+                        <h4 class="footer-heading">Our Services</h4>
+                        <ul class="footer-links">
+                            <li><a href="#services">Food & Beverage</a></li>
+                            <li><a href="#services">Infrastructure</a></li>
+                            <li><a href="#services">Venue Solutions</a></li>
+                            <li><a href="#services">Event Management</a></li>
+                            <li><a href="#services">Strategic Consultancy</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- Contact Info -->
+                    <div class="footer-section">
+                        <h4 class="footer-heading">Get In Touch</h4>
+                        <div class="footer-contact">
+                            <div class="contact-item">
+                                <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
+                                </svg>
+                                <span>Nadi, Fiji Islands</span>
+                            </div>
+                            <div class="contact-item">
+                                <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
+                                </svg>
+                                <span>+679 123 4567</span>
+                            </div>
+                            <div class="contact-item">
+                                <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                                </svg>
+                                <span>info@fivespillars.com.fj</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Footer Bottom -->
+                <div class="footer-bottom">
+                    <div class="footer-divider"></div>
+                    <div class="footer-bottom-content">
+                        <p class="footer-copyright">&copy; 2024 Fives Pillars. All rights reserved.</p>
+                        <div class="footer-legal">
+                            <a href="#" class="legal-link">Privacy Policy</a>
+                            <a href="#" class="legal-link">Terms of Service</a>
+                            <a href="#" class="legal-link">Cookie Policy</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
