Update all local files and workflows for deployment

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="hero-overlay"></div>
         <img src="images/Fives-Pillars-Hero-Banner.jpg" alt="Fives Pillars Hero Banner" class="hero-banner">
         <div class="hero-content">
-            <h1>Fives Pillars</h1>
+            <h1>5 Pillars</h1>
             <p class="tagline">Legacy of Service. Powered by Experience. Built with Wisdom.</p>
             <a href="#contact" class="cta-button">Get Started</a>
         </div>
@@ -111,7 +111,7 @@
 
         <!-- Founders Section -->
         <section id="founders" class="section founders-section component">
-            <h2>Meet the Founders</h2>
+            <h2>Board of Directors</h2>
             <div class="founders-grid">
                 <div class="founder-card">
                     <img src="images/Josh V Taubale (Business Finance & Rugby Director).jpg" alt="Josh V Taubale" class="founder-photo" data-founder="Josh V Taubale">
@@ -142,39 +142,6 @@
         </section>
         <!-- End Founders Section -->
 
-        <!-- Mobile Founders Carousel (hidden on desktop) -->
-        <div class="founders-carousel-mobile">
-            <button class="carousel-btn prev" aria-label="Previous Founder">&#8592;</button>
-            <div class="carousel-track">
-                <div class="founder-card-slide active">
-                    <img src="images/Josh V Taubale (Business Finance & Rugby Director).jpg" alt="Josh V Taubale" class="founder-photo" data-founder="Josh V Taubale">
-                    <h3>Josh V Taubale</h3>
-                    <p class="founder-title">Business Finance & Rugby Director</p>
-                </div>
-                <div class="founder-card-slide">
-                    <img src="images/Joseva Vakacokaivalu (Consultant Advisor Director, MBE).jpg" alt="Joseva Vakacokaivalu" class="founder-photo" data-founder="Joseva Vakacokaivalu">
-                    <h3>Joseva Vakacokaivalu</h3>
-                    <p class="founder-title">Consultant Advisor Director, MBE</p>
-                </div>
-                <div class="founder-card-slide">
-                    <img src="images/Illy Raderua (Property Advisor Director).jpg" alt="Illy Raderua" class="founder-photo" data-founder="Illy Raderua">
-                    <h3>Illy Raderua</h3>
-                    <p class="founder-title">Property Advisor Director</p>
-                </div>
-                <div class="founder-card-slide">
-                    <img src="images/Ilaitia T Ravuwai (Catering & Hospitality Director).jpg" alt="Ilaitia T Ravuwai" class="founder-photo" data-founder="Ilaitia T Ravuwai">
-                    <h3>Ilaitia T Ravuwai</h3>
-                    <p class="founder-title">Catering & Hospitality Director</p>
-                </div>
-                <div class="founder-card-slide">
-                    <img src="images/Bill Cama (Health & Safety Director).jpg" alt="Bill Cama" class="founder-photo" data-founder="Bill Cama">
-                    <h3>Bill Cama</h3>
-                    <p class="founder-title">Health & Safety Director</p>
-                </div>
-            </div>
-            <button class="carousel-btn next" aria-label="Next Founder">&#8594;</button>
-        </div>
-
         <!-- Founder Image Modal (hidden by default) -->
         <div id="founder-modal" class="founder-modal" aria-modal="true" role="dialog" tabindex="-1" style="display:none;">
             <div class="founder-modal-backdrop"></div>
@@ -189,7 +156,7 @@
         <section id="services" class="section component">
             <div class="container">
                 <h2>Our Services</h2>
-                <!-- Desktop Services Grid (hidden on mobile) -->
+                <!-- Services Grid (responsive) -->
                 <div class="services-grid">
                     <div class="service-card">
                         <h3>F - Food & Beverage</h3>
@@ -236,55 +203,6 @@
                             </ul>
                         </div>
                     </div>
-                </div>
-                <!-- Mobile Services Carousel (hidden on desktop) -->
-                <div class="services-carousel-mobile">
-                    <button class="carousel-btn prev" aria-label="Previous Service">&#8592;</button>
-                    <div class="carousel-track">
-                        <div class="service-card-slide active">
-                            <h3>F - Food & Beverage</h3>
-                            <ul>
-                                <li>Restaurant Services</li>
-                                <li>Catering</li>
-                                <li>Private Chef</li>
-                                <li>Bar Service</li>
-                            </ul>
-                        </div>
-                        <div class="service-card-slide">
-                            <h3>I - Infrastructure & Equipment</h3>
-                            <ul>
-                                <li>Catering Hire Gear</li>
-                                <li>Portable Toilets</li>
-                                <li>Ovens & Equipment</li>
-                            </ul>
-                        </div>
-                        <div class="service-card-slide">
-                            <h3>V - Venue Solutions</h3>
-                            <ul>
-                                <li>Marquees</li>
-                                <li>Scaffolding</li>
-                                <li>Site Setup</li>
-                            </ul>
-                        </div>
-                        <div class="service-card-slide">
-                            <h3>E - Event Management</h3>
-                            <ul>
-                                <li>Planning & Logistics</li>
-                                <li>Waitstaff & Chefs</li>
-                                <li>Consultants</li>
-                                <li>Funeral Directors</li>
-                            </ul>
-                        </div>
-                        <div class="service-card-slide">
-                            <h3>S - Strategic Consultancy</h3>
-                            <ul>
-                                <li>Business Start-up</li>
-                                <li>Scale Operations</li>
-                                <li>Improvement Strategies</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <button class="carousel-btn next" aria-label="Next Service">&#8594;</button>
                 </div>
             </div>
         </section>
