--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="hero-overlay"></div>
         <img src="images/Fives-Pillars-Hero-Banner.jpg" alt="Fives Pillars Hero Banner" class="hero-banner">
         <div class="hero-content">
-            <h1>5 Pillars</h1>
+            <h1>FIVES PILLARS</h1>
             <p class="tagline">Legacy of Service. Powered by Experience. Built with Wisdom.</p>
             <a href="#contact" class="cta-button">Get Started</a>
         </div>
@@ -134,8 +134,8 @@
                     <p class="founder-title">Catering & Hospitality Director</p>
                 </div>
                 <div class="founder-card">
-                    <img src="images/Bill Cama (Health & Safety Director).jpg" alt="Bill Cama" class="founder-photo" data-founder="Bill Cama">
-                    <h3>Bill Cama</h3>
+                    <img src="images/Bill Cama (Health & Safety Director).jpg" alt="Sainimili Nasilasila" class="founder-photo" data-founder="Sainimili Nasilasila">
+                    <h3>Sainimili Nasilasila</h3>
                     <p class="founder-title">Health & Safety Director</p>
                 </div>
             </div>
@@ -158,30 +158,32 @@
                 <h2>Our Services</h2>
                 <!-- Services Grid (responsive) -->
                 <div class="services-grid">
-                    <div class="service-card">
-                        <h3>F - Food & Beverage</h3>
-                        <ul>
-                            <li>Restaurant Services</li>
-                            <li>Catering</li>
-                            <li>Private Chef</li>
-                            <li>Bar Service</li>
-                        </ul>
-                    </div>
-                    <div class="service-card">
-                        <h3>I - Infrastructure & Equipment</h3>
-                        <ul>
-                            <li>Catering Hire Gear</li>
-                            <li>Portable Toilets</li>
-                            <li>Ovens & Equipment</li>
-                        </ul>
-                    </div>
-                    <div class="service-card">
-                        <h3>V - Venue Solutions</h3>
-                        <ul>
-                            <li>Marquees</li>
-                            <li>Scaffolding</li>
-                            <li>Site Setup</li>
-                        </ul>
+                    <div class="services-row">
+                        <div class="service-card">
+                            <h3>F - Food & Beverage</h3>
+                            <ul>
+                                <li>Restaurant Services</li>
+                                <li>Catering</li>
+                                <li>Private Chef</li>
+                                <li>Bar Service</li>
+                            </ul>
+                        </div>
+                        <div class="service-card">
+                            <h3>I - Infrastructure & Equipment</h3>
+                            <ul>
+                                <li>Catering Hire Gear</li>
+                                <li>Portable Toilets</li>
+                                <li>Ovens & Equipment</li>
+                            </ul>
+                        </div>
+                        <div class="service-card">
+                            <h3>V - Venue Solutions</h3>
+                            <ul>
+                                <li>Marquees</li>
+                                <li>Scaffolding</li>
+                                <li>Site Setup</li>
+                            </ul>
+                        </div>
                     </div>
                     <!-- Bottom row wrapped for perfect centering -->
                     <div class="services-bottom-row">
@@ -352,7 +354,7 @@
                                 <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                                 </svg>
-                                <span>info@fivespillars.com.fj</span>
+                                <span>info@fivespillars.com</span>
                             </div>
                         </div>
                     </div>
@@ -362,7 +364,7 @@
                 <div class="footer-bottom">
                     <div class="footer-divider"></div>
                     <div class="footer-bottom-content">
-                        <p class="footer-copyright">&copy; 2024 Fives Pillars. All rights reserved.</p>
+                        <p class="footer-copyright">&copy; 2025 Fives Pillars. All rights reserved.</p>
                         <div class="footer-legal">
                             <a href="#" class="legal-link">Privacy Policy</a>
                             <a href="#" class="legal-link">Terms of Service</a>
